<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.brandeis.cs.lapps</groupId>
    <artifactId>reverb-web-service</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Brandeis LAPPS Web Services Wrapping ReVerb relation extractor</name>
    <description>
        Publish API for the LAPPS exchange data structure (LEDS), the thing that will be serialized to from JSON-LD.
        Provide converter for the ReVerb output into LEDS and LIF format.
    </description>
    <parent>
        <artifactId>war-parent-pom</artifactId>
        <groupId>org.lappsgrid.maven</groupId>
        <version>2.0.5</version>
    </parent>

    <properties>
        <lapps.all>2.3.3</lapps.all>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>the Maven central repository</id>
            <url>http://repo.maven.apache.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>all</artifactId>
            <version>${lapps.all}</version>
        </dependency>

        <!-- Main ReVerb package -->
        <dependency>
            <groupId>edu.washington.cs.knowitall</groupId>
            <artifactId>reverb-core</artifactId>
            <version>1.4.1</version>
        </dependency>
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.11.0</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>reverb-web-service#${project.version}</finalName>

        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass/>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <annotationProcessors>
                        <annotationProcessor>
                            org.lappsgrid.annotation.processing.MetadataProcessor
                        </annotationProcessor>
                    </annotationProcessors>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>src/main/resources/metadata</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>-Xms512m -Xmx2048m</argLine>
                    <argLine>-XX:+UseConcMarkSweepGC</argLine>
                </configuration>
            </plugin>

            <!-- will generate Version class at project root, which is used in test -->
            <plugin>
                <groupId>org.anc.maven.plugins</groupId>
                <artifactId>anc-maven-plugin</artifactId>
                <version>1.0.7</version>
                <executions>
                    <execution>
                        <id>version-class</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>version-class</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <package>edu.brandeis.cs.lappsgrid.reverb</package>
                </configuration>
            </plugin>
        </plugins>

        <!-- copy version as resource -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/version.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>**/version.properties</exclude>
                </excludes>
            </resource>
        </resources>

    </build>

</project>
